--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,12 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite App</title>
+        <title>Coca</title>
     </head>
-    <body class="body">
+    <body class="body" data-them="light">
+        <div class="container">
+            <h1 class="heading-h1">hello world</h1>
+        </div>
         <script type="module" src="./js/main.js"></script>
     </body>
 </html>
