--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,8 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Coca</title>
-    </head>
+    <load src="./html/base/head.html" title="Home" />
+
     <body class="body" data-them="light">
-        <div class="container">
-            <h1 class="heading-h1">hello world</h1>
-        </div>
         <script type="module" src="./js/main.js"></script>
     </body>
 </html>
