--- a/src/contact.html
+++ b/src/contact.html
@@ -9,6 +9,7 @@
         
         <load src="./html/components/contact/hero.html"/>
         <load src="./html/components/partners.html" />
+        <load src="./html/components/contact/getStarted.html" />
 
         <load src="./html/components/footer.html" />
         
