--- a/src/about.html
+++ b/src/about.html
@@ -6,7 +6,8 @@
         <load src="./html/components/header.html" title="About" />
 
         <load src="./html/components/about/hero.html" />
-
+        <load src="./html/components/about/growth.html" />
+        
         <load src="./html/components/footer.html" />
 
         <script type="module" src="./js/about.js"></script>
