--- a/src/about.html
+++ b/src/about.html
@@ -8,6 +8,7 @@
         <load src="./html/components/about/hero.html" />
         <load src="./html/components/about/growth.html" />
         <load src="./html/components/about/staff.html" />
+        <load src="./html/components/about/invitation.html" />
 
         <load src="./html/components/footer.html" />
 
