Created blog:guides section

--- a/src/blog.html
+++ b/src/blog.html
@@ -6,6 +6,7 @@
         <load src="./html/components/header.html" title="Blog" />
 
         <load src="./html/components/blog/activity.html" />
+        <load src="./html/components/blog/guides.html" />
 
         <load src="./html/components/footer.html" />
 
