--- a/src/blog.html
+++ b/src/blog.html
@@ -7,6 +7,7 @@
 
         <load src="./html/components/blog/activity.html" />
         <load src="./html/components/blog/guides.html" />
+        <load src="./html/components/blog/articles.html" />
 
         <load src="./html/components/footer.html" />
 
